# lavaplayer

./: .gitignore  CHANGELOG.md  README.md  build.gradle.kts  jitpack.yml  lavaplayer_code_review.md  settings.gradle.kts
.github/scripts/: check_and_update.py
.github/workflows/: build.yml  dependency-update.yml  natives.yml  release.yml
common/src/main/java/com/sedmelluq/lava/common/natives/: NativeLibraryLoader.java  NativeResourceHolder.java
common/src/main/java/com/sedmelluq/lava/common/tools/: DaemonThreadFactory.java  ExecutorTools.java
extensions/spring-boot-starter/: build.gradle.kts
extensions/youtube-rotator/: build.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
main/: build.gradle.kts
main/src/main/java/com/sedmelluq/discord/lavaplayer/player/: AudioConfiguration.java  AudioPlayerManager.java  DefaultAudioPlayer.java  DefaultAudioPlayerManager.java
main/src/main/java/com/sedmelluq/discord/lavaplayer/tools/: DataFormatTools.java  JsonBrowser.java  OrderedExecutor.java
main/src/main/java/com/sedmelluq/discord/lavaplayer/track/: AudioTrack.java  AudioTrackInfo.java  BaseAudioTrack.java  DelegatedAudioTrack.java
main/src/test/groovy/com/sedmelluq/discord/lavaplayer/: LibrarySpec.groovy
main/src/test/groovy/com/sedmelluq/discord/lavaplayer/player/: DefaultAudioPlayerManagerSpec.groovy  DefaultAudioPlayerSpec.groovy
main/src/test/groovy/com/sedmelluq/discord/lavaplayer/source/: ProbingAudioSourceManagerSpec.groovy
natives/: CMakeLists.txt  build.gradle  natives.gradle
natives-publish/src/main/resources/natives/darwin/: libconnector.dylib
natives/connector/: CMakeLists.txt  fdk-aac.c  mpg123.c  opus.c  samplerate.c  vorbis.c
natives/connector/linux/: statistics.c
natives/connector/win/: statistics.c
natives/fdk-aac/: CMakeLists.txt
natives/samplerate/: CMakeLists.txt  config.h
natives/vorbis/: CMakeLists.txt
(+145 files in other folders)
